parser/y.output

0: shift/reduce conflict (shift 5(0), red'n 168(0)) on ';'
0: shift/reduce conflict (shift 8(0), red'n 168(0)) on '\n'
state 0
	$accept: .compstmt $end 
	opt_term: .    (168)

	';'  shift 5
	'\n'  shift 8
	.  reduce 168 (src line 1079)

	compstmt  goto 1
	stmts  goto 3
	opt_term  goto 2
	term  goto 4
	newlines  goto 6
	newline  goto 7

state 1
	$accept:  compstmt.$end 

	$end  accept
	.  error


 2: reduce/reduce conflict  (red'ns 1 and 5) on $end
 2: reduce/reduce conflict  (red'ns 1 and 5) on CASE
 2: reduce/reduce conflict  (red'ns 1 and 5) on DEFAULT
 2: reduce/reduce conflict  (red'ns 1 and 5) on '}'
 2: reduce/reduce conflict  (red'ns 1 and 5) on '\n'
state 2
	compstmt:  opt_term.    (1)
	stmts:  opt_term.stmt 
	stmt: .    (5)
	exprs: .    (57)

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	RETURN  shift 13
	VAR  shift 48
	THROW  shift 14
	IF  shift 26
	FOR  shift 27
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 28
	GO  shift 17
	MAKE  shift 40
	OPCHAN  shift 57
	EQOPCHAN  reduce 57 (src line 455)
	LEN  shift 37
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 41
	IMPORT  shift 38
	'='  reduce 57 (src line 455)
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	','  reduce 57 (src line 455)
	';'  reduce 5 (src line 141)
	'['  shift 32
	'!'  shift 58
	.  reduce 1 (src line 106)

	stmt  goto 9
	stmt_var_or_lets  goto 10
	stmt_var  goto 24
	stmt_lets  goto 25
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	exprs  goto 49
	expr  goto 23
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

3: shift/reduce conflict (shift 8(0), red'n 168(0)) on '\n'
state 3
	compstmt:  stmts.opt_term 
	stmts:  stmts.term stmt 
	opt_term: .    (168)

	';'  shift 5
	'\n'  shift 8
	.  reduce 168 (src line 1079)

	opt_term  goto 66
	term  goto 67
	newlines  goto 6
	newline  goto 7

state 4
	opt_term:  term.    (169)

	.  reduce 169 (src line 1081)


5: shift/reduce conflict (shift 8(0), red'n 172(0)) on '\n'
state 5
	term:  ';'.newlines 
	term:  ';'.    (172)

	'\n'  shift 8
	.  reduce 172 (src line 1086)

	newlines  goto 68
	newline  goto 7

6: shift/reduce conflict (shift 8(0), red'n 171(0)) on '\n'
state 6
	term:  newlines.    (171)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 171 (src line 1085)

	newline  goto 69

state 7
	newlines:  newline.    (175)

	.  reduce 175 (src line 1092)


state 8
	newline:  '\n'.    (177)

	.  reduce 177 (src line 1096)


state 9
	stmts:  opt_term stmt.    (3)

	.  reduce 3 (src line 116)


state 10
	stmt:  stmt_var_or_lets.    (6)

	.  reduce 6 (src line 146)


state 11
	stmt:  BREAK.    (7)

	.  reduce 7 (src line 150)


state 12
	stmt:  CONTINUE.    (8)

	.  reduce 8 (src line 155)


state 13
	stmt:  RETURN.exprs 
	exprs: .    (57)

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  reduce 57 (src line 455)

	exprs  goto 70
	expr  goto 71
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 14
	stmt:  THROW.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 72
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 15
	stmt:  MODULE.IDENT '{' compstmt '}' 

	IDENT  shift 73
	.  error


state 16
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' FINALLY '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH IDENT '{' compstmt '}' 
	stmt:  TRY.'{' compstmt '}' CATCH '{' compstmt '}' 

	'{'  shift 74
	.  error


state 17
	stmt:  GO.IDENT '(' exprs VARARG ')' 
	stmt:  GO.IDENT '(' exprs ')' 
	stmt:  GO.expr '(' exprs VARARG ')' 
	stmt:  GO.expr '(' exprs ')' 

	IDENT  shift 75
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 76
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 18
	stmt:  DELETE.'(' expr ')' 
	stmt:  DELETE.'(' expr ',' expr ')' 

	'('  shift 77
	.  error


state 19
	stmt:  CLOSE.'(' expr ')' 

	'('  shift 78
	.  error


state 20
	stmt:  stmt_if.    (23)
	stmt_if:  stmt_if.ELSE IF expr '{' compstmt '}' 
	stmt_if:  stmt_if.ELSE '{' compstmt '}' 

	ELSE  shift 79
	.  reduce 23 (src line 230)


state 21
	stmt:  stmt_for.    (24)

	.  reduce 24 (src line 234)


state 22
	stmt:  stmt_switch.    (25)

	.  reduce 25 (src line 238)


23: shift/reduce conflict (shift 81(2), red'n 58(0)) on EQOPCHAN
23: shift/reduce conflict (shift 80(2), red'n 58(0)) on '='
state 23
	stmt:  expr.    (26)
	stmt_lets:  expr.'=' expr 
	stmt_lets:  expr.EQOPCHAN expr 
	exprs:  expr.    (58)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.NILCOALESCE expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.IN expr 
	expr_member:  expr.'.' IDENT 
	expr_slice:  expr.'[' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' ']' 
	expr_slice:  expr.'[' ':' expr ']' 
	expr_slice:  expr.'[' ':' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' expr ':' expr ']' 
	expr_chan:  expr.OPCHAN expr 
	expr_lets:  expr.PLUSPLUS 
	expr_lets:  expr.MINUSMINUS 
	expr_lets:  expr.PLUSEQ expr 
	expr_lets:  expr.MINUSEQ expr 
	expr_lets:  expr.OREQ expr 
	expr_lets:  expr.MULEQ expr 
	expr_lets:  expr.DIVEQ expr 
	expr_lets:  expr.ANDEQ expr 
	op_multiply:  expr.'*' expr 
	op_multiply:  expr.'/' expr 
	op_multiply:  expr.'%' expr 
	op_multiply:  expr.SHIFTLEFT expr 
	op_multiply:  expr.SHIFTRIGHT expr 
	op_multiply:  expr.'&' expr 
	op_add:  expr.'+' expr 
	op_add:  expr.'-' expr 
	op_add:  expr.'|' expr 
	op_comparison:  expr.EQEQ expr 
	op_comparison:  expr.NEQ expr 
	op_comparison:  expr.'<' expr 
	op_comparison:  expr.LE expr 
	op_comparison:  expr.'>' expr 
	op_comparison:  expr.GE expr 
	op_binary:  expr.ANDAND expr 
	op_binary:  expr.OROR expr 

	IN  shift 86
	EQEQ  shift 106
	NEQ  shift 107
	GE  shift 111
	LE  shift 109
	OROR  shift 113
	ANDAND  shift 112
	NILCOALESCE  shift 83
	PLUSEQ  shift 91
	MINUSEQ  shift 92
	MULEQ  shift 94
	DIVEQ  shift 95
	ANDEQ  shift 96
	OREQ  shift 93
	PLUSPLUS  shift 89
	MINUSMINUS  shift 90
	SHIFTLEFT  shift 100
	SHIFTRIGHT  shift 101
	OPCHAN  shift 88
	EQOPCHAN  shift 81
	'='  shift 80
	'?'  shift 82
	'<'  shift 108
	'>'  shift 110
	'+'  shift 103
	'-'  shift 104
	'|'  shift 105
	'*'  shift 97
	'/'  shift 98
	'%'  shift 99
	'&'  shift 102
	'('  shift 84
	','  reduce 58 (src line 460)
	'['  shift 85
	'.'  shift 87
	.  reduce 26 (src line 242)


state 24
	stmt_var_or_lets:  stmt_var.    (27)

	.  reduce 27 (src line 248)


state 25
	stmt_var_or_lets:  stmt_lets.    (28)

	.  reduce 28 (src line 253)


state 26
	stmt_if:  IF.expr '{' compstmt '}' 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 114
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

 27: reduce/reduce conflict  (red'ns 95 and 57) on ','
state 27
	stmt_for:  FOR.'{' compstmt '}' 
	stmt_for:  FOR.expr_idents IN expr '{' compstmt '}' 
	stmt_for:  FOR.expr '{' compstmt '}' 
	stmt_for:  FOR.';' ';' '{' compstmt '}' 
	stmt_for:  FOR.';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.';' expr ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' ';' expr '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' '{' compstmt '}' 
	stmt_for:  FOR.stmt_var_or_lets ';' expr ';' expr '{' compstmt '}' 
	expr_idents: .    (95)
	exprs: .    (57)

	IDENT  shift 120
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	VAR  shift 48
	IN  reduce 95 (src line 644)
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 115
	'('  shift 34
	';'  shift 118
	'['  shift 32
	'!'  shift 58
	.  reduce 57 (src line 455)

	stmt_var_or_lets  goto 119
	stmt_var  goto 24
	stmt_lets  goto 25
	exprs  goto 49
	expr  goto 117
	expr_idents  goto 116
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 28
	stmt_switch:  SWITCH.expr '{' opt_newlines stmt_switch_cases opt_newlines '}' 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 121
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 29
	expr:  expr_member_or_ident.    (61)

	.  reduce 61 (src line 479)


state 30
	expr:  expr_literals.    (62)

	.  reduce 62 (src line 484)


state 31
	expr:  FUNC.'(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.'(' expr_idents VARARG ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents ')' '{' compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents VARARG ')' '{' compstmt '}' 

	IDENT  shift 123
	'('  shift 122
	.  error


32: shift/reduce conflict (shift 124(0), red'n 173(0)) on ']'
32: shift/reduce conflict (shift 8(0), red'n 173(0)) on '\n'
state 32
	expr:  '['.']' 
	expr:  '['.opt_newlines exprs opt_comma_newlines ']' 
	slice_count:  '['.']' 
	slice_count:  '['.']' slice_count 
	opt_newlines: .    (173)

	']'  shift 124
	'\n'  shift 8
	.  reduce 173 (src line 1088)

	opt_newlines  goto 125
	newlines  goto 126
	newline  goto 7

state 33
	expr:  slice_count.type_data '{' opt_newlines exprs opt_comma_newlines '}' 

	IDENT  shift 128
	CHAN  shift 132
	STRUCT  shift 133
	MAP  shift 131
	'*'  shift 129
	'['  shift 134
	.  error

	type_data  goto 127
	slice_count  goto 130

state 34
	expr:  '('.expr ')' 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 135
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

35: shift/reduce conflict (shift 136(0), red'n 112(0)) on '('
state 35
	expr:  IDENT.'(' exprs VARARG ')' 
	expr:  IDENT.'(' exprs ')' 
	expr_ident:  IDENT.    (112)

	'('  shift 136
	.  reduce 112 (src line 752)


36: shift/reduce conflict (shift 137(0), red'n 110(0)) on '['
state 36
	expr:  expr_ident.'[' expr ']' 
	expr_member_or_ident:  expr_ident.    (110)
	expr_slice:  expr_ident.'[' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' ']' 
	expr_slice:  expr_ident.'[' ':' expr ']' 
	expr_slice:  expr_ident.'[' ':' expr ':' expr ']' 
	expr_slice:  expr_ident.'[' expr ':' expr ':' expr ']' 

	'['  shift 137
	.  reduce 110 (src line 740)


state 37
	expr:  LEN.'(' expr ')' 

	'('  shift 138
	.  error


state 38
	expr:  IMPORT.'(' expr ')' 

	'('  shift 139
	.  error


state 39
	expr:  NEW.'(' type_data ')' 

	'('  shift 140
	.  error


state 40
	expr:  MAKE.'(' type_data ')' 
	expr:  MAKE.'(' type_data ',' expr ')' 
	expr:  MAKE.'(' type_data ',' expr ',' expr ')' 
	expr:  MAKE.'(' TYPE IDENT ',' expr ')' 

	'('  shift 141
	.  error


state 41
	expr:  MAP.'{' opt_newlines expr_map opt_comma_newlines '}' 
	expr:  MAP.'[' type_data ']' type_data '{' opt_newlines expr_map opt_comma_newlines '}' 

	'{'  shift 142
	'['  shift 143
	.  error


42: shift/reduce conflict (shift 8(0), red'n 173(0)) on '\n'
state 42
	expr:  '{'.opt_newlines expr_map opt_comma_newlines '}' 
	opt_newlines: .    (173)

	'\n'  shift 8
	.  reduce 173 (src line 1088)

	opt_newlines  goto 144
	newlines  goto 126
	newline  goto 7

state 43
	expr:  expr_slice.    (90)

	.  reduce 90 (src line 630)


state 44
	expr:  expr_chan.    (91)

	.  reduce 91 (src line 635)


state 45
	expr:  expr_unary.    (92)

	.  reduce 92 (src line 640)


state 46
	expr:  expr_binary.    (93)

	.  reduce 93 (src line 641)


state 47
	expr:  expr_lets.    (94)

	.  reduce 94 (src line 642)


state 48
	stmt_var:  VAR.expr_idents '=' exprs 
	expr_idents: .    (95)

	IDENT  shift 146
	.  reduce 95 (src line 644)

	expr_idents  goto 145

state 49
	stmt_lets:  exprs.'=' exprs 
	stmt_lets:  exprs.EQOPCHAN expr 
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	EQOPCHAN  shift 148
	'='  shift 147
	','  shift 149
	.  error


state 50
	expr_member_or_ident:  expr_member.    (109)

	.  reduce 109 (src line 735)


state 51
	expr_literals:  '-'.NUMBER 
	expr_unary:  '-'.expr 

	IDENT  shift 35
	NUMBER  shift 150
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 151
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 52
	expr_literals:  NUMBER.    (114)

	.  reduce 114 (src line 769)


state 53
	expr_literals:  STRING.    (115)

	.  reduce 115 (src line 778)


state 54
	expr_literals:  TRUE.    (116)

	.  reduce 116 (src line 783)


state 55
	expr_literals:  FALSE.    (117)

	.  reduce 117 (src line 788)


state 56
	expr_literals:  NIL.    (118)

	.  reduce 118 (src line 793)


state 57
	expr_chan:  OPCHAN.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 152
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 58
	expr_unary:  '!'.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 153
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 59
	expr_unary:  '^'.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 154
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 60
	expr_unary:  '&'.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 155
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 61
	expr_unary:  '*'.expr 

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MAKE  shift 40
	OPCHAN  shift 57
	LEN  shift 37
	MAP  shift 41
	IMPORT  shift 38
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	'['  shift 32
	'!'  shift 58
	.  error

	expr  goto 156
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

state 62
	expr_binary:  op_multiply.    (139)

	.  reduce 139 (src line 896)


state 63
	expr_binary:  op_add.    (140)

	.  reduce 140 (src line 902)


state 64
	expr_binary:  op_comparison.    (141)

	.  reduce 141 (src line 907)


state 65
	expr_binary:  op_binary.    (142)

	.  reduce 142 (src line 912)


state 66
	compstmt:  stmts opt_term.    (2)

	.  reduce 2 (src line 111)


 67: reduce/reduce conflict  (red'ns 169 and 5) on $end
 67: reduce/reduce conflict  (red'ns 169 and 5) on CASE
 67: reduce/reduce conflict  (red'ns 169 and 5) on DEFAULT
 67: reduce/reduce conflict  (red'ns 169 and 5) on '}'
 67: reduce/reduce conflict  (red'ns 169 and 5) on '\n'
state 67
	stmts:  stmts term.stmt 
	opt_term:  term.    (169)
	stmt: .    (5)
	exprs: .    (57)

	IDENT  shift 35
	NUMBER  shift 52
	STRING  shift 53
	FUNC  shift 31
	RETURN  shift 13
	VAR  shift 48
	THROW  shift 14
	IF  shift 26
	FOR  shift 27
	NEW  shift 39
	TRUE  shift 54
	FALSE  shift 55
	NIL  shift 56
	MODULE  shift 15
	TRY  shift 16
	BREAK  shift 11
	CONTINUE  shift 12
	SWITCH  shift 28
	GO  shift 17
	MAKE  shift 40
	OPCHAN  shift 57
	EQOPCHAN  reduce 57 (src line 455)
	LEN  shift 37
	DELETE  shift 18
	CLOSE  shift 19
	MAP  shift 41
	IMPORT  shift 38
	'='  reduce 57 (src line 455)
	'-'  shift 51
	'^'  shift 59
	'*'  shift 61
	'&'  shift 60
	'{'  shift 42
	'('  shift 34
	','  reduce 57 (src line 455)
	'['  shift 32
	'!'  shift 58
	.  reduce 5 (src line 141)

	stmt  goto 157
	stmt_var_or_lets  goto 10
	stmt_var  goto 24
	stmt_lets  goto 25
	stmt_if  goto 20
	stmt_for  goto 21
	stmt_switch  goto 22
	exprs  goto 49
	expr  goto 23
	slice_count  goto 33
	expr_member_or_ident  goto 29
	expr_member  goto 50
	expr_ident  goto 36
	expr_literals  goto 30
	expr_slice  goto 43
	expr_chan  goto 44
	expr_unary  goto 45
	expr_binary  goto 46
	expr_lets  goto 47
	op_binary  goto 65
	op_comparison  goto 64
	op_add  goto 63
	op_multiply  goto 62

68: shift/reduce conflict (shift 8(0), red'n 170(0)) on '\n'
state 68
	term:  ';' newlines.    (170)
	newlines:  newlines.newline 

	'\n'  shift 8
	.  reduce 170 (src line 1083)

	newline  goto 69

state 69
	newlines:  newlines newline.    (176)

	.  reduce 176 (src line 1094)


state 70
	stmt:  RETURN exprs.    (9)
	exprs:  exprs.',' opt_newlines expr 
	exprs:  exprs.',' opt_newlines expr_ident 

	','  shift 149
	.  reduce 9 (src line 160)


state 71
	exprs:  expr.    (58)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.NILCOALESCE expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.IN expr 
	expr_member:  expr.'.' IDENT 
	expr_slice:  expr.'[' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' ']' 
	expr_slice:  expr.'[' ':' expr ']' 
	expr_slice:  expr.'[' ':' expr ':' expr ']' 
	expr_slice:  expr.'[' expr ':' expr ':' expr ']' 
	expr_chan:  expr.OPCHAN expr 
	expr_lets:  expr.PLUSPLUS 
	expr_lets:  expr.MINUSMINUS 
	expr_lets:  expr.PLUSEQ expr 
	expr_lets:  expr.MINUSEQ expr 
	expr_lets:  expr.OREQ expr 
	expr_lets:  expr.MULEQ expr 
	expr_lets:  expr.DIVEQ expr 
	expr_lets:  expr.ANDEQ expr 
	op_multiply:  expr.'*' expr 
	op_multiply:  expr.'/' expr 
	op_multiply:  expr.'%' expr 
	op_multiply:  expr.SHIFTLEFT expr 
	op_multiply:  expr.SHIFTRIGHT expr 
	op_multiply:  expr.'&' expr 
	op_add:  expr.'+' expr 
	op_add:  expr.'-' expr 
	op_add:  expr.'|' expr 
	op_comparison:  expr.EQEQ expr 
	op_comparison:  expr.NEQ expr 
	op_comparison:  expr.'<' expr 
	op_comparison:  expr.LE expr 
	op_comparison:  expr.'>' expr 
	op_comparison:  expr.GE expr 
	op_binary:  expr.ANDAND expr 
	op_binary:  expr.OROR expr 
